# internal/server/api_handlers.go
@@ -1,6 +1,9 @@
 package server
 
 import (
+	"crypto/rand"
+	"encoding/hex"
+	"fmt"
 	"github.com/danielmichaels/onpicket/internal/request"
 	"github.com/danielmichaels/onpicket/internal/response"
 	"github.com/danielmichaels/onpicket/internal/validator"
@@ -8,6 +11,13 @@ import (
 	"github.com/danielmichaels/onpicket/pkg/api"
 	"net/http"
 )
+
+// generateName creates a random name for use in identifiers
+func generateName(s string) string {
+	b := make([]byte, 4)
+	rand.Read(b)
+	return fmt.Sprintf("%s-%s", s, hex.EncodeToString(b))
+}
 
 func (app *Application) Healthz(w http.ResponseWriter, r *http.Request) {
 	health := api.Healthz{
@@ -33,17 +43,28 @@ func (app *Application) CreateScan(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
+	// make this a function
 	v := validator.Validator{}
 	v.CheckField(newScan.Host != "", "host", "host must not be empty")
 	v.CheckField(newScan.Ports != nil, "ports", "ports must not be empty")
+	// todo: validate against:
+	// -p-
+	// 1-200
+	// 22,33,44
+	v.CheckField(validator.NotBlank(string(newScan.Type)), "type", "type must not be empty")
+	enumTypes := []api.NewScanType{api.PortScan, api.ServiceDiscovery}
+	v.CheckField(validator.In(newScan.Type, enumTypes...), "type", "type must be a valid option")
 
 	if v.HasErrors() {
 		app.apiValidationError(w, "validation failed", v.FieldErrors)
 		return
 	}
 	scan := api.Scan{
-		Host:  newScan.Host,
-		Ports: newScan.Ports,
+		Id:     generateName(string(newScan.Type)),
+		Ports:  newScan.Ports,
+		Host:   newScan.Host,
+		Type:   string(newScan.Type),
+		Status: api.Scheduled,
 	}
 
 	scans = append(scans, scan)
